--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=springbootjpa-adhar
+
+spring.datasource.url=jdbc:mysql://@localhost:3306/usernominee
+spring.datasource.username=root
+spring.datasource.password=rakesh
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql:true
+spring.jpa.hibernate.ddl-auto=update
